# ParallelNumeric

./: .gitignore  CMakeLists.txt  Debuggers.hpp  ErrorCodes.hpp  InterfaceFunctions.hpp  MatricesTests.hpp  Matrix.hpp  MatrixAndVectorOperations.hpp  NumericalAlgorythms.hpp  NumericalCore.hpp  NumericalCoreMatrixMultiplication.hpp  OptimalOperations.hpp  ParallelNumeric.cpp  ParallelNumeric.hpp  README.md  RecursiveFunctions.hpp  ResourceManager.cpp  ResourceManager.hpp  StandardBuild.sh  Vector.hpp  main.cpp
Docs/: .MatrixBlocks.autosave.xopp  General Todos  transpose.xopp
Include/Maintenance/: Debuggers.hpp  ErrorCodes.hpp  MatricesTests.hpp  PerfTests.hpp
Include/Management/: ResourceManager.hpp  ThreadSolutions.hpp
Include/Operations/: AVXSolutions.hpp  MatrixMultiplication.hpp  MatrixMultiplicationSolutions.hpp  NumericalAlgorithms.hpp  NumericalCore.hpp  RecursiveFunctions.hpp
Include/Types/: Matrix.hpp  Vector.hpp
Include/Wrappers/: InterfaceFunctions.hpp  OptimalOperations.hpp  ParallelNumeric.hpp
Scripts/: BuildClang.bash  CompileAndBuildAsm.ps1
Src/: Debuggers.cpp  ErrorCodes.cpp  Matrix.cpp  MatrixMultiplication.cpp  MatrixMultiplicationSolutions.cpp  NumericalCore.cpp  ParallelNumeric.cpp  ResourceManager.cpp  Vector.cpp
TempDevFiles/: BuildAndLinkAsm.ps1  BuildGcc.bash  CompileToAsm.ps1  General Todos  build.ps1  tester.sh
